VC4-Development-0.0.0-212
	+ Reduced memory load
VC4-Development-0.0.0-213
	+ Added movement style enum
VC4-Development-0.0.0-214
	+ Added support for tools
VC4-Development-0.0.0-215
	+ Added cracks
VC4-Development-0.0.0-216
	* Fixed cracks bugs
VC4-Development-0.0.1-218
	+ New Resource Loader
	+ Added Animated Texture Loader (ATL, old one known as STL)
	+ Plugins can have their own resources
VC4-Development-0.0.1-219
	* Fixed meta character bug
VC4-Development-0.0.1-220
	* Language files are now resources
VC4-Development-0.0.1-221
	* Fixed "failed to load texture" bug
VC4-Development-0.0.1-223
	+ Added sound and music support
VC4-Development-0.0.1-224
	+ Worlds can play music based on player position
VC4-Development-0.0.1-225
	* World Generation is now done on threads and is faster and doesn't contribute to lag as much (especially in hell)
VC4-Development-0.0.1-226
	* Better biome api
VC4-Development-0.0.1-227
	+ New BlockRendererFace
VC4-Development-0.0.1-228
	* Improved creative items
VC4-Development-0.0.1-229
	* Fixed item creative bug
VC4-Development-0.0.1-230
	+ Added stats
VC4-Development-0.0.1-231
	+ VBT Save format
VC4-Development-0.0.1-232
	+ Saving and loading
VC4-Development-0.0.1-233
	+ Added model support
VC4-Development-0.0.1-234
	+ Added TextureCoords for rotating textures
VC4-Development-0.0.1-235
	+ Added areas
VC4-Development-0.0.1-236
	+ Lighting
VC4-Development-0.0.1-237
	+ Lighting
VC4-Development-0.0.1-238
	+ Fire damage
	+ Liquid damage
	+ Mob spawning
VC4-Development-0.0.1-239
	+ Command Handling
VC4-Development-0.0.1-240
	+ Fluid overlay
VC4-Development-0.0.1-241
	* Better plant API
VC4-Development-0.0.1-242
	* Fixed NPE with new plants
VC4-Development-0.0.1-243
	* Fixed skylight graphics bug
VC4-Development-0.0.1-244
	+ World select gui file
VC4-Development-0.0.1-245
	* Fixed main menu as world select menu
VC4-Development-0.0.1-246
	* Decreased item pickup range
VC4-Development-0.0.1-247
	* Fixed infinite stack bugs