@@ -22,7 +22,7 @@ public class LauncherGui extends JFrame {
 	public LauncherGui() {
 		setDefaultCloseOperation(EXIT_ON_CLOSE);
 		setSize(640, 480);
-		setTitle("VoxelCaverns Launcher v4");
+		setTitle("VoxelCaverns Launcher v4.4");
 		JTabbedPane tabbedPane = new JTabbedPane(JTabbedPane.TOP);
 		tabbedPane.addTab("News", new ImageIcon(getClass().getClassLoader().getResource("resources/icons/news.png")), new NewsTab());
 		tabbedPane.addTab("Settings", new ImageIcon(getClass().getClassLoader().getResource("resources/icons/settings.png")), new SettingsTab());
